[package]
name = "book"
version = "0.1.0"
edition = "2024"
description = "A fun game where you guess what number the computer has chosen."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/book"
homepage = "https://www.dart.xin"
repository = "https://github.com/zwdart/book"

[dependencies]
